# HFPathSimulatorLiveData

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.cpu  MANIFEST.in  README.md  docker-compose.cpu.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml  publish.yml
conda-recipe/: build.sh  meta.yaml
deploy/aws/: cloudformation.yaml  ecs-task-definition.json
deploy/azure/: README.md  cloud-init.yaml  main.tf  outputs.tf  variables.tf
deploy/gcp/: README.md  main.tf  outputs.tf  variables.tf
deploy/helm/hfpathsim/: Chart.yaml  README.md  values.yaml
deploy/helm/hfpathsim/templates/: _helpers.tpl  configmap.yaml  deployment-api.yaml  deployment-web.yaml  hpa.yaml  ingress.yaml  service-api.yaml  service-web.yaml
deploy/kubernetes/: deployment.yaml
docker/: entrypoint.sh  healthcheck.sh  nginx.conf
docs/: Vogler-Hoffmeyer-Processing.md  Vogler-IPM-Processing.md  getting-started.md  hf-propagation-theory.md  index.md  test-results.md  user-guide.md
docs/api/: python-api.md  rest-api.md  websocket-api.md
docs/deployment/: aws.md  azure.md  gcp.md
docs/tutorials/: 01-basic-simulation.md  02-gui-walkthrough.md  03-sdr-integration.md  04-gnuradio-bridge.md  05-custom-channels.md  06-channel-validation.md  07-modem-testing.md
scripts/: build_gpu.sh  install_gpu.sh  run_dashboard.py  test_dashboard_audio.py  test_dashboard_chain.py  test_dashboard_debug.py  test_full_chain_auto.py  test_phase_auto.py  test_phase_continuity.py  test_sample_rate_fix.py  test_tone.py  validate_channel_models.py
src/hfpathsim/: __init__.py  __main__.py
src/hfpathsim/api/: __init__.py  app.py  models.py
src/hfpathsim/api/routes/: __init__.py  channel.py  processing.py  streaming.py
src/hfpathsim/core/: __init__.py  channel.py  dispersion.py  impairments.py  itu_channels.py  noise.py  parameters.py  recording.py  vogler_hoffmeyer.py  vogler_ipm.py  watterson.py
src/hfpathsim/core/raytracing/: __init__.py  geometry.py  ionosphere.py  path_finder.py  ray_engine.py
src/hfpathsim/engine/: __init__.py  session.py  simulation_engine.py
src/hfpathsim/gpu/: CMakeLists.txt  __init__.py  bindings.cpp
src/hfpathsim/gpu/kernels/: agc.cu  agc_cpu.cpp  dispersion.cu  dispersion_cpu.cpp  display.cu  display_cpu.cpp  fading.cu  noise.cu  noise_cpu.cpp  resampler.cu  resampler_cpu.cpp  signal_proc.cu  vh_rf_chain.cu  vh_rf_chain_cpu.cpp  vogler_transfer.cu  watterson.cu  watterson_cpu.cpp
src/hfpathsim/gui/: __init__.py  main_window.py
src/hfpathsim/gui/resources/: style.qss
src/hfpathsim/gui/widgets/: __init__.py  channel_display.py  channel_panel.py  control_tabs.py  impairments_panel.py  input_config.py  ionosphere_panel.py  noise_panel.py  output_config.py  parameters.py  recording_panel.py  scattering.py  spectrum.py
src/hfpathsim/input/: __init__.py  base.py  file.py  flexradio.py  network.py  sdr.py  siggen.py
src/hfpathsim/integration/: __init__.py  gnuradio_zmq.py  matlab_interface.py
src/hfpathsim/iono/: __init__.py  geomagnetic.py  giro.py  iri.py  manual.py  sporadic_e.py
src/hfpathsim/output/: __init__.py  audio.py  base.py  file.py  multiplex.py  network.py  sdr.py
src/hfpathsim/profiling/: __init__.py  benchmarks.py  gpu_profiler.py  memory.py  reports.py  timing.py
src/hfpathsim/validation/: __init__.py  reference_data.py  statistics.py  validator.py
tests/: __init__.py  test_api.py  test_channel_models.py  test_engine.py  test_geomagnetic.py  test_gpu.py  test_input.py  test_integration.py  test_itu_channels.py  test_output.py  test_profiling.py  test_raytracing.py  test_spectrum.py  test_sporadic_e.py  test_validation.py  test_vogler.py  test_vogler_hoffmeyer_gpu.py
web/: Dockerfile  index.html  nginx.conf  package.json
web/src/: App.tsx  index.css
web/src/api/: client.ts  websocket.ts
web/src/components/: ChannelDisplay.css  ChannelDisplay.tsx  ControlTabs.css  ControlTabs.tsx  Dashboard.css  Dashboard.tsx  Spectrum.tsx
web/src/hooks/: useChannelState.ts  useWebSocket.ts
