[project]
name = "hfpathsim"
version = "0.1.0"
description = "HF Channel Simulator with Vogler-Hoffmeyer IPM and GPU acceleration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "HFPathSim Contributors"},
]
maintainers = [
    {name = "HFPathSim Contributors"},
]
keywords = [
    "hf",
    "high-frequency",
    "ionosphere",
    "channel-simulation",
    "vogler",
    "watterson",
    "propagation",
    "radio",
    "signal-processing",
    "gpu",
    "cuda",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Communications :: Ham Radio",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pyzmq>=25.0",
]

[project.optional-dependencies]
# GUI dependencies (desktop application)
gui = [
    "PyQt6>=6.6",
    "pyqtgraph>=0.13",
]

# GPU acceleration
gpu = [
    "cupy-cuda12x>=13.0",
    "pybind11>=2.12",
]

# REST API server
api = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "pydantic>=2.0",
]

# SDR hardware support
sdr = [
    "soapysdr",
]

# IRI-2016 ionospheric model
iri = [
    "iri2016",
]

# Audio output
audio = [
    "sounddevice>=0.4.0",
]

# MATLAB interface
matlab = [
    "scipy>=1.12",
]

# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.0",
]

# Documentation
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

# All optional dependencies (except dev/docs)
all = [
    "hfpathsim[gui,gpu,api,sdr,iri,audio,matlab]",
]

[project.scripts]
hfpathsim = "hfpathsim.__main__:main"
hfpathsim-server = "hfpathsim.api.app:main"

[project.urls]
Homepage = "https://github.com/hfpathsim/hfpathsim"
Documentation = "https://hfpathsim.readthedocs.io"
Repository = "https://github.com/hfpathsim/hfpathsim"
Issues = "https://github.com/hfpathsim/hfpathsim/issues"
Changelog = "https://github.com/hfpathsim/hfpathsim/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=68", "pybind11>=2.12", "cmake>=3.28"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hfpathsim.gui.resources" = ["*.qss"]
"hfpathsim" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring native CUDA module",
    "benchmark: marks performance benchmark tests",
    "api: marks tests requiring FastAPI dependencies",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "cupy.*",
    "pyqtgraph.*",
    "PyQt6.*",
    "soapysdr.*",
    "iri2016.*",
    "sounddevice.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["hfpathsim"]

[tool.coverage.run]
source = ["src/hfpathsim"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
